--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
   <h4 class="good">&nbsp; </h4>
   
   
-  <h4 class="good"><a href="./index3.html">HOME</a> | <a href="">SHUFFLE</a> | <a href="">READING</a> | <a href="">SOUL CARDS</a> | <a href ="./index.html">MAJOR</a> </h4>
+  <h4 class="good"><a href="./index3.html">HOME</a> | <a href="">SHUFFLE</a> | <a href="">READING</a> | <a href="">SOUL CARDS</a> | <a href ="./index2.html">MAJOR</a> </h4>
 	
   <!-- Hero Section --><!-- Stats Gallery Section -->
   <div class="gallery">
