--- a/index3.html
+++ b/index3.html
@@ -22,7 +22,7 @@
 	<p>    </p>
 	<p>    </p>
 	<p> </p>
-<h4 class="good"> <a href="./index3.html">HOME</a> | <a href="">SHUFFLE</a> | <a href="">READING</a> | <a href="">SOUL CARDS</a> | <a href ="./index.html">MAJOR</a> </h4>
+<h4 class="good"> <a href="./index3.html">HOME</a> | <a href="">SHUFFLE</a> | <a href="">READING</a> | <a href="">SOUL CARDS</a> | <a href ="./index2.html">MAJOR</a> </h4>
 	
   <!-- Hero Section --><!-- Stats Gallery Section -->
 <div class="gallery"><a href=""><img src="./image/t10.gif" alt="" width="1424" height="532"/></a></div>
